--- a/style.css
+++ b/style.css
@@ -133,3 +133,24 @@ main {
 button:hover {
   background: #8a6545;
 }
+/* 📱 Mode téléphone */
+@media (max-width: 600px) {
+
+  h1 {
+    font-size: 38px;
+  }
+
+  nav a {
+    display: block;
+    margin: 10px 0;
+  }
+
+  .gallery {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .card {
+    width: 90%;
+  }
+}
